packages/config/src/__tests__/fixtures/loadConfigFromFile/invalid/syntax-error/prisma.config.ts
import { defineConfig } from 'src/index'

export default defineConfig({
  earlyAccess: true,
}
